# dreamer

./: .dockerignore  .env-example  .env-test  .gitignore  .spotify_token_cache.json  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/lyrics/: Cargo.toml
crates/lyrics/src/: lib.rs  lyrics.py
crates/rspotify/: Cargo.toml
crates/rspotify/examples/: album.rs  current_user_recently_played.rs  oauth_tokens.rs  track.rs  tracks.rs  with_refresh_token.rs
crates/rspotify/examples/ureq/: device.rs  me.rs  search.rs  seek_track.rs
crates/rspotify/src/: client.rs  lib.rs  oauth2.rs
crates/rspotify/src/http/: mod.rs  reqwest.rs  ureq.rs
crates/rspotify/src/model/: album.rs  artist.rs  audio.rs  category.rs  context.rs  device.rs  mod.rs  offset.rs  playlist.rs  recommend.rs  search.rs  show.rs  track.rs  user.rs
crates/rspotify/src/model/enums/: misc.rs  mod.rs
crates/rspotify/tests/: test_models.rs  test_with_credential.rs  test_with_oauth.rs
crates/rspotify/tests/common/: mod.rs
crates/wither/: Cargo.toml
crates/wither/examples/: readme.rs
crates/wither/src/: common.rs  cursor.rs  error.rs  lib.rs  migration.rs  model.rs
crates/wither/tests/: model.rs
crates/wither/tests/fixtures/: mod.rs
crates/wither/tests/fixtures/models/: index_test.rs
crates/wither_derive/src/: lib.rs  model.rs
crates/youtube-music/: Cargo.toml
crates/youtube-music/src/: lib.rs  search.py
docs/: ENTITY-CLA.md  INDIVIDUAL-CLA.md
i18n/: en.json  es.json
src/: audio.rs  commands.rs  constants.rs  database.rs  errors.rs  events.rs  hooks.rs  lang.rs  main.rs  paginator.rs  spotify.rs  utils.rs
src/audio/: audio_ext.rs  ext.rs  queue.rs  restartable.rs  source.rs
src/commands/: audio.rs  general.rs  help.rs  music.rs
src/commands/audio/: back.rs  effects.rs  fast_forward.rs  join.rs  leave.rs  lyrics.rs  next.rs  pause.rs  play.rs  queue.rs  repeat.rs  resume.rs  rewind.rs  seek.rs  shuffle.rs  song.rs  stop.rs  volume.rs
src/commands/general/: guild_settings.rs  latency.rs  settings.rs
src/commands/music/: join.rs  leave.rs  play.rs
src/database/: guild.rs  user.rs
