[package]
name = "dreamer"
version = "0.1.0"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"

[workspace]
members = [
    "crates/youtube-music",
    "crates/wither",
    "crates/wither_derive",
    "crates/rspotify",
    "crates/lyrics",
]

[dependencies]
songbird = { git = "https://github.com/KernelFreeze/songbird" }
dotenv = "0.15.0"
wither = { path = "crates/wither" }
serde = "1.0.123"
futures = "0.3.12"
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1.0.62"
strfmt = "0.1.6"
youtube-music = { path = "crates/youtube-music" }
rspotify = { path = "crates/rspotify" }
lyrics = { path = "crates/lyrics" }
regex = "1.4.3"
flume = "0.10.2"
byteorder = "1.4.2"
humantime = "2.1.0"
thiserror = "1.0.24"
smallvec = "1.6.1"
progressing = { git = "https://github.com/KernelFreeze/progressing" }
hhmmss = "0.1"
async-recursion = "0.3.2"

[dependencies.serenity]
version = "0.10.2"
features = ["voice", "absolute_ratelimits", "collector"]

[dependencies.tokio]
version = "1.2.0"
features = ["macros", "rt-multi-thread"]
