[package]
name = "dreamer"
version = "0.1.0"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"

[workspace]
members = [
    "crates/youtube-music",
    "crates/wither",
    "crates/wither_derive",
    "crates/lyrics",
]

[dependencies]
dotenv = "0.15"
wither = { path = "crates/wither" }
serde = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1.0"
strfmt = "0.1"
youtube-music = { path = "crates/youtube-music" }
rspotify = { git = "https://github.com/ramsayleung/rspotify.git" }
lyrics = { path = "crates/lyrics" }
regex = "1.4"
flume = "0.10"
byteorder = "1.4"
humantime = "2.1"
thiserror = "1.0"
smallvec = "1.6"
progressing = { git = "https://github.com/KernelFreeze/progressing" }
hhmmss = "0.1"
rand = "0.8"
async-recursion = "0.3"
mimalloc = { version = "0.1", default-features = false }
simd-json = "0.3"

[dependencies.songbird]
git = "https://github.com/KernelFreeze/songbird.git"

[dependencies.serenity]
git = "https://github.com/KernelFreeze/serenity.git"
features = ["voice", "absolute_ratelimits", "collector"]

[dependencies.tokio]
version = "1.2"
features = ["macros", "rt-multi-thread"]
