[package]
name = "dreamer"
version = "0.1.0"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"

[workspace]
members = [
    "crates/youtube-music",
    "crates/lyrics",
]

[dependencies]
serde = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1.0"
strfmt = "0.1"
youtube-music = { path = "crates/youtube-music" }
lyrics = { path = "crates/lyrics" }
regex = "1.5"
flume = "0.10"
byteorder = "1.4"
humantime = "2.1"
thiserror = "1.0"
smallvec = "1.6"
hhmmss = "0.1"
rand = "0.8"
async-recursion = "0.3"
mimalloc = { version = "0.1", default-features = false }
simd-json = "0.4"

[dependencies.wither]
git = "https://github.com/KernelFreeze/wither.git"

[dependencies.rspotify]
git = "https://github.com/KernelFreeze/rspotify.git"

[dependencies.progressing]
git = "https://github.com/KernelFreeze/progressing.git"
branch = "nightly"

[dependencies.songbird]
git = "https://github.com/KernelFreeze/songbird.git"
branch = "current"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
features = ["voice", "absolute_ratelimits", "collector"]

[dependencies.tokio]
version = "1.16"
features = ["macros", "rt-multi-thread"]
